# easy-home-monitoring

./: .gitignore  README.md
camera_android/: README.md
camera_android/app/: build.gradle
camera_android/app/src/main/: AndroidManifest.xml
camera_android/app/src/main/java/com/zhang_ray/camera/: AvcEncoder.java  Logger.java  MainActivity.java  TcpClient.java
camera_android/app/src/main/res/layout/: activity_main.xml
camera_android/gradle/wrapper/: gradle-wrapper.properties
home_server/: CMakeLists.txt  Entry.cpp  TcpServer.hpp
include/: NetPacket.hpp  Room.hpp
